# fable-5-jailbreak

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  PACK-HUNT-EXPLAINED.md  README.md  benchmark.py  evalkit_server.py  pyproject.toml  requirements.txt  run.py  setup.sh
docs/: ARCHITECTURE.md  TEAM_ONBOARDING.md  TECHNIQUES.md  threat_model.md
evalkit/: __init__.py  agent_orchestrator.py  agent_router.py  api_client.py  auth.py  cli_jb.py  context_builder.py  context_smuggler.py  decomposer.py  encoder.py  fable_client.py  framer.py  merger.py  models.py  obfuscator.py  reassembler.py  splitter.py  wrapper.py
tests/: test_agent_orchestrator.py  test_context_smuggler.py  test_decomposer.py  test_framer.py  test_models.py  test_obfuscator.py  test_server.py
